# Netwatchdog

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yml  vcpkg.json  vs-chromium-project.txt
.github/workflows/: build.yml  cmake-multi-platform.yml
data/: dashboard.html  index.html  login.html  modal.html  styles.css
data/dashboard/: api-keys.html  logs.html
data/scripts/: auth.js  check.js  login-form.js  login-redirect.js  login-script.js  redirectToLogin.js
data/styles/: index.css  login.css  styles.css
data/templates/: apikey-div.template  apikey-form.template  apikey-li.template  tbody-tr-td.template  tbody-tr.template  tbody.template  thead-tr-th.template  thead-tr.template  thead.template
docker/: README.md
docker/client/: Dockerfile
docker/server/: Dockerfile
docker/web/: Dockerfile
source/admin/: main.cpp
source/client/: client.cpp  client.h  main.cpp
source/common/: communication.h  config.cpp  config.h  configurableoption.cpp  configurableoption.h  messages.cpp  messages.h  objectmodel.cpp  objectmodel.h  options.cpp  options.h  tests.cpp  tests.h  utils.cpp  utils.h
source/database/: bson_utils.h  mongo.cpp  mongo.h
source/libweb/: applink.cpp  web-template.cpp  webserver.cpp  webserver.h  webtemplate.cpp
source/server/: bson_utils.cpp  main.cpp  monitor.cpp  monitor.h  objectmodel.h  server.cpp  server.h
source/server/database/: mongo.cpp  mongo.h
source/tests/common/: config_tests.cpp  configurableoption_tests.cpp  objectmodel_tests.cpp  zmq_tests.cpp
source/tests/web/: main.cpp  web_tests.cpp
source/web/: main.cpp  web-template.h
